<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background_login" >

     <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:background="@drawable/log_1"
        android:contentDescription="@string/company" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView"
        android:text="@string/loginperson" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textView1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView1"
        android:minHeight="48dp"
        android:text="@string/logout"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageButton
        android:id="@+id/devinformation"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/userinformation"
        android:layout_toLeftOf="@+id/button2"
        android:background="@drawable/datastore"
        android:contentDescription="@string/deviceinformation"
        android:text="@string/deviceinformation" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/devinformation"
        android:layout_marginTop="29dp"
        android:layout_toRightOf="@+id/textView1"
        android:background="@drawable/rfid"
        android:contentDescription="@string/check" />

    <Button
        android:id="@+id/userinformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_marginTop="17dp"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/userinformation" />

    <Button
        android:id="@+id/modifyinformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/devinformation"
        android:layout_toLeftOf="@+id/button1"
        android:text="@string/modifyinformation" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/modifyinformation"
        android:layout_below="@+id/modifyinformation"
        android:layout_marginTop="14dp"
        android:text="@string/writein" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/button3"
        android:layout_marginTop="28dp"
        android:text="@string/emegency" />

</RelativeLayout>