<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/pro_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/update_fault"
        />
    <EditText
        android:id="@+id/method_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/history_sloved"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            />
        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/my_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="false"
        android:scrollbars="vertical" />
    

</LinearLayout>