<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="3dp"
        android:contentDescription="@string/headimage"
        android:src="@drawable/admin" />

	<LinearLayout 
    android:orientation="vertical"
    android:layout_width="170dp"
    android:layout_height="50dp"
    android:layout_margin="3dp"
    >
    <LinearLayout 
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="25dp"
    android:layout_weight="1"
    > 

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="25dp"
		    android:text="@string/devname"
		    android:textSize="19sp" />
     
		<TextView  
		android:id="@+id/tv_dname"
		android:textSize="16sp"
	    android:layout_width="wrap_content" 
	    android:layout_height="25dp" 
	    />
    </LinearLayout>
<LinearLayout 
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="25dp"
    android:layout_weight="1"
    > 

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="bottom"
		    android:text="@string/devnum"
		    android:textSize="19sp" />

		<TextView
		android:id="@+id/tv_duser"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:layout_gravity="bottom"
	    />
    </LinearLayout>
</LinearLayout>
</LinearLayout>

